# obsideo-cloud

./: .gitignore  README.md  pyproject.toml
docs/: filename_encryption_spec.md
obsideo/: __init__.py  __main__.py  cli.py  manifest.py  sync.py
obsideo_core/: __init__.py  config.py  crypto.py  identity.py  login.py  names.py  storage.py
tests/: test_cli.py  test_core.py
