[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "obsideo-cli"
version = "0.2.2"
description = "Obsideo Cloud - encrypted storage we can't read. Save, browse, and sync whatever you want, from your terminal."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "boto3>=1.28",
    "cryptography>=41.0",
    "certifi",
]

[project.urls]
Homepage = "https://obsideo.io"

[project.scripts]
obsideo = "obsideo.cli:main"
obsideo-cli = "obsideo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["obsideo*", "obsideo_core*"]
